--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 body{
   margin: 0;
   padding: 0;
+  height: 100%;
   background-image:linear-gradient(to bottom, #1f2833,#0b0c10);
   background-repeat: no-repeat;
-  color: #60d8d2;
+  color: #fff;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .container{
-  width: 50%;
-  margin: 5% auto;
+  width: 40%;
+  margin: 40px auto;
   box-sizing: border-box;
 }
 .heading{
   padding-top: 25px;
-  height: 15vh;
+  height: 100px;
   background-color: #0b0c10;
   box-sizing: border-box;
-  box-shadow: 3px 3px 15px black;
+  box-shadow: 3px 3px 10px black;
 }
 h1{
   margin: 0;
@@ -26,36 +27,44 @@ h1{
   text-shadow: 5px 5px 10px black;
 }
 h1:hover{
-  text-shadow: 2px 2px 10px #60d8d2;
+  text-shadow: 2px 2px 10px #fff;
 }
+#error{
+  text-align: center;
+  color: red;
+  font-size: 22px;
+  visibility:hidden;
+}
+
 .field{
   width: 100%;
   margin:30px 0;
-  height: 50px;
+  height: 40px;
   background-color: #0b0c10;
   border-radius: 5px;
   box-shadow: 3px 3px 15px black;
   box-sizing: border-box;
 }
 .field label{
-  margin-top: 8px;
+  margin-top: 5px;
   margin-left: 20px;
-  font-size: 24px;
+  font-size: 20px;
   display: inline-block;
 }
 .field input{
   width: 70%;
-  height: 48px;
+  height: 38px;
   float: right;
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: 700;
   padding-left: 20px;
-  background-color: #60d8d2;
+  background-color: rgb(196, 203, 218);
   border-radius: 5px;
   border: none;
   outline: none;
 }
 .field input:focus{
-  background-color: aliceblue;
+  background-color: #fff;
 }
 .btn{
   width: 100%;
@@ -63,25 +72,35 @@ h1:hover{
   margin-top: 50px;
 }
 .btn button{
-  width: 60%;
-  height: 50px;
-  font-size: 20px;
+  width: 50%;
+  height: 40px;
+  font-size: 18px;
+  cursor: pointer;
   background-color: #0b0c10;
-  color: #60d8d2;
+  color: #fff;
   border-radius: 5px;
-  border: 2px solid #60d8d2;
+  border: 2px solid #fff;
   box-shadow: 3px 3px 15px black ;
 }
-.btn button:hover,.field:hover{
-  box-shadow: 2px 2px 10px #60d8d2 ;
+.btn button:hover{
+  box-shadow: 1px 1px 10px #fff ;
+}
+.btn button:active{
+  transform: translateY(3px);
 }
 .summary{
   margin-top: 50px;
   font-size: 20px;
   display: none;
 }
+#loading{
+  text-align: center;
+  margin-top: 30px;
+  font-size: 22px;
+  display: none;
+}
 .footer{
-  margin-top: 200px;
+  margin-top: 185px;
   height: 100px;
   background-color: #0b0c10;
   box-shadow: 3px 3px 15px black;
@@ -93,13 +112,18 @@ h1:hover{
   text-shadow: 3px 3px 15px black;
 }
 .footer i:hover{
-  text-shadow: 1px 1px 8px #60d8d2 ;
+  text-shadow: 1px 1px 8px #fff ;
 }
 
+/* Mobile View */
 @media only screen and (max-width: 414px) {
+  .container{
+    margin: 35px auto;
+  }
+  #error{
+    font-size: 20px;
+  }
   .heading{
-    padding-top: 25px;
-    height: 12vh;
     text-align: center;
   }
   h1{
@@ -109,32 +133,22 @@ h1:hover{
   .container{
     width: 80%;
   }
-  .field{
-    background-color: inherit;
-    box-shadow: none;
-    display: block;
-  }
   .field label{
-    margin-top: 20px;
-    margin-left: 0px;
-    display: block;
-    text-shadow: 5px 5px 15px black;
+    margin-top: 8px;
+    font-size: 18px;
+    margin-left: 14px;
   }
   .field input{
-    width: 100%;
-    float: left;
-    margin: 20px 0;
-    font-size: 20px;
-    padding-left: 10px;
-    display: block;
-    box-sizing: border-box;
-    box-shadow: 5px 5px 15px black;
+    width: 60%;
+    font-size: 12px;
+    padding-left: 20px;
+  }
+  .btn{
+    margin-top: 50px;
   }
   .btn button{
-    margin-top: 20px;
-  }
-  .btn button:hover,.field:hover{
-    box-shadow: none ;
+    font-size: 18px;
+    border: 1px solid #fff;
   }
   .footer{
     margin-top: 100px;
