--- a/style.css
+++ b/style.css
@@ -13,21 +13,20 @@ body{
   box-sizing: border-box;
 }
 .heading{
-  padding-top: 25px;
+  padding-top: 30px;
   height: 100px;
-  background-color: #0b0c10;
+  /* background-color: #0b0c10; */
+  background-color: rgb(196, 203, 218);
+  color:#0b0c10;
   box-sizing: border-box;
-  box-shadow: 3px 3px 10px black;
+  box-shadow: 5px 5px 10px black;
 }
 h1{
   margin: 0;
   margin-left: 50px;
-  font-size: 36px;
+  font-size: 30px;
   font-weight: 700;
-  text-shadow: 5px 5px 10px black;
-}
-h1:hover{
-  text-shadow: 2px 2px 10px #fff;
+  text-decoration: underline;
 }
 #error{
   text-align: center;
@@ -35,7 +34,6 @@ h1:hover{
   font-size: 22px;
   visibility:hidden;
 }
-
 .field{
   width: 100%;
   margin:30px 0;
@@ -90,8 +88,19 @@ h1:hover{
 }
 .summary{
   margin-top: 50px;
-  font-size: 20px;
-  display: none;
+}
+#result{
+  font-size: 48px;
+}
+#unitRate{
+  margin-top: -20px;
+  font-size: 18px;
+  text-align: right;
+  text-decoration: underline;
+}
+.countries{
+  margin-top: 40px;
+  font-size: 18px ;
 }
 #loading{
   text-align: center;
@@ -127,7 +136,7 @@ h1:hover{
     text-align: center;
   }
   h1{
-    font-size: 32px;
+    font-size: 28px;
     margin: 0;
   }
   .container{
